# solcore

./: .gitignore  README.md  flake.nix  hie.yaml  scripts.nix  sol-core.cabal
app/: Main.hs
src/Common/: Pretty.hs
src/Language/: Core.hs  Yul.hs
src/Solcore/Desugarer/: Defunctionalization.hs  Defunctionalizer.hs  InternalSyntaxCompiler.hs  MatchCompiler.hs  ReplaceWildcard.hs  SolcoreDesugar.hs  Specialise.hs
src/Solcore/Frontend/: Syntax.hs
src/Solcore/Frontend/Lexer/: SolcoreLexer.x
src/Solcore/Frontend/Parser/: SolcoreParser.hs  SolcoreParser.y
src/Solcore/Frontend/Pretty/: SolcorePretty.hs
src/Solcore/Frontend/Syntax/: Contract.hs  Name.hs  Stmt.hs  Ty.hs
src/Solcore/Frontend/TypeInference/: AbsFun.hs  Checker.hs  Constraints.hs  Desugar.hs  ISyntax.hs  Id.hs  NameSupply.hs  PrintFun.hs  SccAnalysis.hs  Specialise.hs  TcContract.hs  TcEnv.hs  TcMonad.hs  TcStmt.hs  TcSubst.hs  TcUnify.hs
src/Solcore/Pipeline/: SolcorePipeline.hs
src/Solcore/Primitives/: Primitives.hs  Primitives.solc
test/: Main.hs
test/examples/: Ackermann.solc  Compose.solc  ERC20.solc  EitherModule.solc  Eq.solc  Equality.solc  EvenOdd.solc  Example.solc  Filter.solc  GetSet.solc  Id.solc  ListModule.solc  Logic.solc  Map.solc  MatchExamples.solc  Mutuals.solc  Nat.solc  NegPair.solc  Option.solc  Pair.solc  Peano.solc  PeanoMatch.solc  SillyReturn.solc  SimpleContract.sol  SimpleContract.solc  SimpleField.solc  SimpleLambda.solc  Unit.solc
test/examples/Yul/: SimpleStorage.yul
test/examples/spec/: 01id.solc  02nid.solc  03join.solc  04pair.solc  05triple.solc  06comp.solc  07rgb.solc  08rgb2.solc  09not.solc  10negBool.solc  11negPair.solc
yule/: Main.hs  Translate.hs
