cabal-version: 3.4

name:           sol-core
version:        0.0.0.0
-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:     Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts

  build-depends:
      base >= 4.19.0.0
    , mtl
    , containers
    , fgl
    , array
    , pretty 
    , optparse-applicative
    , syb
  default-language: Haskell2010
  default-extensions: OverloadedStrings
                      FlexibleInstances
                      FlexibleContexts
                      PatternSynonyms
                      TupleSections
                      TypeFamilies
                      BlockArguments
                      DeriveDataTypeable

library
  import: common-opts

  -- cabal-fmt: expand src
  exposed-modules:
      -- Solcore.Desugarer.Defunctionalization
      -- Solcore.Desugarer.MatchCompiler
      -- Solcore.Desugarer.ReplaceWildcard
      -- Solcore.Desugarer.SolcoreDesugar
      Solcore.Frontend.Lexer.SolcoreLexer
      Solcore.Frontend.Parser.SolcoreParser
      Solcore.Frontend.Pretty.SolcorePretty
      Solcore.Frontend.Syntax
      Solcore.Frontend.Syntax.Ty 
      Solcore.Frontend.Syntax.Contract
      Solcore.Frontend.Syntax.Name 
      Solcore.Frontend.Syntax.Stmt
      Solcore.Frontend.TypeInference.Id
      Solcore.Frontend.TypeInference.NameSupply
      Solcore.Frontend.TypeInference.SccAnalysis
      Solcore.Frontend.TypeInference.TcContract
      Solcore.Frontend.TypeInference.TcEnv
      Solcore.Frontend.TypeInference.TcMonad
      Solcore.Frontend.TypeInference.TcStmt
      Solcore.Frontend.TypeInference.TcSubst
      Solcore.Frontend.TypeInference.TcUnify
      -- -- Solcore.Pipeline.SolcorePipeline
      Solcore.Primitives.Primitives

  hs-source-dirs:
      src

executable sol-core
  import: common-opts
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends: sol-core
  build-tool-depends: alex:alex, happy:happy


test-suite sol-core-tests
  import: common-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is: Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:

  build-depends:
    , sol-core
    , tasty
    , tasty-hunit
